# long-running-single-context-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
benchmark_samples/: v0_1_realistic.json
configs/: pilot_codex.toml  pilot_fixture.toml  v0_1_realistic_codex.toml
related_works/: literature_review.md
scripts/: run_benchmark.py  run_tests.py
src/interleave_codebench/: __init__.py  cli.py  config.py  utils.py
src/interleave_codebench/agents/: __init__.py  actions.py  policies.py  runner.py
src/interleave_codebench/bench/: __init__.py  adapters.py  memory.py  mixers.py  scheduler.py  types.py  v0_1.py
tests/: test_adapters.py  test_cli.py  test_config.py  test_memory.py  test_mixer_scheduler.py  test_runner.py  test_v0_1.py
tests/fixtures/swe_bench_verified/: tasks.json
tests/fixtures/swe_bench_verified/repos/python_bug_repo/: bugs.py  verify.py
tests/fixtures/swe_ci/: tasks.csv
tests/fixtures/swe_ci/repos/python_ci_repo/: pipeline.py  verify.py
tests/fixtures/tools/: external_cli_stub.py
